--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -190,13 +190,13 @@
                 </div>
                 <ul class="wishlist__list">
                     <li class="wishlist__item card">
-                        <div class="card__cancel"></div>
+                        <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
                             <img class="card__image-product" src="img/content/wishlist-yellow.png"
                                  alt="Wishlist product">
                         </a>
-                        <div class="card__about-product product">
-                            <a href="#" class="product__link">
+                        <div class="card__about-product products">
+                            <a href="#" class="products__link">
                                 Blue Flower Print Crop Top
                             </a>
                             <p>
@@ -214,13 +214,13 @@
                         </a>
                     </li>
                     <li class="wishlist__item card">
-                        <div class="card__cancel"></div>
+                        <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
                             <img class="card__image-product" src="img/content/wishlist-purple.png"
                                  alt="Wishlist product">
                         </a>
-                        <div class="card__about-product product">
-                            <a href="#" class="product__link">
+                        <div class="card__about-product products">
+                            <a href="#" class="products__link">
                                 Yellow Flower Print Dress
                             </a>
                             <p>
@@ -238,13 +238,13 @@
                         </a>
                     </li>
                     <li class="wishlist__item card">
-                        <div class="card__cancel"></div>
+                        <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
                             <img class="card__image-product" src="img/content/wishlist-white.png"
                                  alt="Wishlist product">
                         </a>
-                        <div class="card__about-product product">
-                            <a href="#" class="product__link">
+                        <div class="card__about-product products">
+                            <a href="#" class="products__link">
                                 White Hoodie long sleeve
                             </a>
                             <p>
@@ -262,13 +262,13 @@
                         </a>
                     </li>
                     <li class="wishlist__item card">
-                        <div class="card__cancel"></div>
+                        <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
                             <img class="card__image-product" src="img/content/wishlist-blue.png"
                                  alt="Wishlist product">
                         </a>
-                        <div class="card__about-product product">
-                            <a href="#" class="product__link">
+                        <div class="card__about-product products">
+                            <a href="#" class="products__link">
                                 Brown men’s long sleeve T-shirt
                             </a>
                             <p>
@@ -292,9 +292,9 @@
             <div class="orders__container">
                 <ul class="orders__list list">
                     <li class="list__item order-product">
-                        <h4 class="order-product__title">
+                        <a class="order-product__title" href="#">
                             Order no: #123456789
-                        </h4>
+                        </a>
                         <div class="order-product__info info">
                             <div class="info__date">
                                 <p>
@@ -315,11 +315,13 @@
                         </div>
                     </li>
                     <li class="list__item about-product">
-                        <img class="about-product__image" src="img/content/orders-black.png" alt="Order product">
+                        <a class="about-product__item" href="#">
+                            <img class="about-product__image" src="img/content/orders-black.png" alt="Order product">
+                        </a>
                         <div class="about-product__info">
-                            <h5 class="about-product__title">
+                            <a class="about-product__title" href="#">
                                 Black Printed T-shirt
-                            </h5>
+                            </a>
                             <p>
                                 Colour : <span>Pink</span>
                             </p>
@@ -335,9 +337,9 @@
                         </a>
                     </li>
                     <li class="list__item order-product">
-                        <h4 class="order-product__title">
+                        <a class="order-product__title" href="#">
                             Order no: #123456789
-                        </h4>
+                        </a>
                         <div class="order-product__info info">
                             <div class="info__date">
                                 <p>
@@ -358,11 +360,13 @@
                         </div>
                     </li>
                     <li class="list__item about-product">
-                        <img class="about-product__image" src="img/content/orders-yellow.png" alt="Order product">
+                        <a class="about-product__item" href="#">
+                            <img class="about-product__image" src="img/content/orders-yellow.png" alt="Order product">
+                        </a>
                         <div class="about-product__info">
-                            <h5 class="about-product__title">
+                            <a class="about-product__title" href="#">
                                 Printed blue & white Cote
-                            </h5>
+                            </a>
                             <p>
                                 Colour : <span>White</span>
                             </p>
@@ -378,9 +382,9 @@
                         </a>
                     </li>
                     <li class="list__item order-product">
-                        <h4 class="order-product__title">
+                        <a class="order-product__title" href="#">
                             Order no: #123456789
-                        </h4>
+                        </a>
                         <div class="order-product__info info">
                             <div class="info__date">
                                 <p>
@@ -401,11 +405,13 @@
                         </div>
                     </li>
                     <li class="list__item about-product">
-                        <img class="about-product__image" src="img/content/orders-white.png" alt="Order product">
+                        <a class="about-product__item" href="#">
+                            <img class="about-product__image" src="img/content/orders-white.png" alt="Order product">
+                        </a>
                         <div class="about-product__info">
-                            <h5 class="about-product__title">
+                            <a class="about-product__title" href="#">
                                 Blue Shirt
-                            </h5>
+                            </a>
                             <p>
                                 Colour : <span>Blue</span>
                             </p>
