--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -19,8 +19,8 @@
                     <div class="search__item">Search</div>
                 </div>
                 <div class="header__menu menu-language">
-                    <a class="menu-language__default menu-language__default--after" href="#">English (united States)
-                    </a>
+                    <div class="menu-language__default menu-language__default--after">English (united States)
+                    </div>
                     <ul class="menu-language__list">
                         <li class="menu-language__item">
                             <a class="menu-language__link" href="#">Ukrainian (Ukraine)
@@ -35,7 +35,7 @@
             </div>
             <div class="header__form form">
                 <a class="form__button-link form__button-link--color" href="#">Login</a>
-                <a class="form__button-link" href="#">Sign Up</a>
+                <a class="form__button-link form__button-link--border" href="#">Sign Up</a>
             </div>
         </div>
     </header>
@@ -44,9 +44,9 @@
         <div class="page__categories categories">
             <div class="categories__container">
                 <div class="categories__title">
-                    <h2>
+                    <h1>
                         Categories For Men
-                    </h2>
+                    </h1>
                 </div>
                 <div class="categories__column column">
                     <div class="column__item item">
@@ -55,9 +55,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Shirts
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -71,9 +71,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Printed T-Shirts
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -87,9 +87,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Plain T-Shirt
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -103,9 +103,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Polo T-Shirt
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -119,9 +119,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Hoodies & Sweetshirt
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -135,9 +135,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Jeans
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -152,9 +152,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Activewear
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -168,9 +168,9 @@
                         </a>
                         <div class="item__product product">
                             <div class="product__info">
-                                <h3 class="product__title">
+                                <a class="product__title-link" href="#">
                                     Boxers
-                                </h3>
+                                </a>
                                 <p>
                                     Explore Now!
                                 </p>
@@ -184,15 +184,15 @@
         <div class="page__wishlist wishlist">
             <div class="wishlist__container">
                 <div class="wishlist__title">
-                    <h3>
+                    <h2>
                         Wishlist
-                    </h3>
+                    </h2>
                 </div>
                 <ul class="wishlist__list">
                     <li class="wishlist__item card">
                         <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
-                            <img class="card__image-product" src="img/content/wishlist-yellow.png"
+                            <img class="card__image-product" src="img/content/wishlist-yellow.webp"
                                  alt="Wishlist product">
                         </a>
                         <div class="card__about-product products">
@@ -216,7 +216,7 @@
                     <li class="wishlist__item card">
                         <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
-                            <img class="card__image-product" src="img/content/wishlist-purple.png"
+                            <img class="card__image-product" src="img/content/wishlist-purple.webp"
                                  alt="Wishlist product">
                         </a>
                         <div class="card__about-product products">
@@ -240,7 +240,7 @@
                     <li class="wishlist__item card">
                         <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
-                            <img class="card__image-product" src="img/content/wishlist-white.png"
+                            <img class="card__image-product" src="img/content/wishlist-white.webp"
                                  alt="Wishlist product">
                         </a>
                         <div class="card__about-product products">
@@ -264,7 +264,7 @@
                     <li class="wishlist__item card">
                         <button class="card__cancel" type="button"></button>
                         <a class="card__product-link" href="#" target="_blank">
-                            <img class="card__image-product" src="img/content/wishlist-blue.png"
+                            <img class="card__image-product" src="img/content/wishlist-blue.webp"
                                  alt="Wishlist product">
                         </a>
                         <div class="card__about-product products">
@@ -292,7 +292,7 @@
             <div class="orders__container">
                 <ul class="orders__list list">
                     <li class="list__item order-product">
-                        <a class="order-product__title" href="#">
+                        <a class="order-product__title-link" href="#">
                             Order no: #123456789
                         </a>
                         <div class="order-product__info info">
@@ -316,10 +316,10 @@
                     </li>
                     <li class="list__item about-product">
                         <a class="about-product__item" href="#">
-                            <img class="about-product__image" src="img/content/orders-black.png" alt="Order product">
+                            <img class="about-product__image" src="img/content/orders-black.webp" alt="Order product">
                         </a>
                         <div class="about-product__info">
-                            <a class="about-product__title" href="#">
+                            <a class="about-product__title-link" href="#">
                                 Black Printed T-shirt
                             </a>
                             <p>
@@ -337,7 +337,7 @@
                         </a>
                     </li>
                     <li class="list__item order-product">
-                        <a class="order-product__title" href="#">
+                        <a class="order-product__title-link" href="#">
                             Order no: #123456789
                         </a>
                         <div class="order-product__info info">
@@ -361,10 +361,10 @@
                     </li>
                     <li class="list__item about-product">
                         <a class="about-product__item" href="#">
-                            <img class="about-product__image" src="img/content/orders-yellow.png" alt="Order product">
+                            <img class="about-product__image" src="img/content/orders-yellow.webp" alt="Order product">
                         </a>
                         <div class="about-product__info">
-                            <a class="about-product__title" href="#">
+                            <a class="about-product__title-link" href="#">
                                 Printed blue & white Cote
                             </a>
                             <p>
@@ -382,7 +382,7 @@
                         </a>
                     </li>
                     <li class="list__item order-product">
-                        <a class="order-product__title" href="#">
+                        <a class="order-product__title-link" href="#">
                             Order no: #123456789
                         </a>
                         <div class="order-product__info info">
@@ -406,10 +406,10 @@
                     </li>
                     <li class="list__item about-product">
                         <a class="about-product__item" href="#">
-                            <img class="about-product__image" src="img/content/orders-white.png" alt="Order product">
+                            <img class="about-product__image" src="img/content/orders-white.webp" alt="Order product">
                         </a>
                         <div class="about-product__info">
-                            <a class="about-product__title" href="#">
+                            <a class="about-product__title-link" href="#">
                                 Blue Shirt
                             </a>
                             <p>
@@ -433,9 +433,9 @@
 
     <footer class="footer">
             <div class="footer__title">
-                <h6>
+                <h3>
                     Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.
-                </h6>
+                </h3>
             </div>
     </footer>
 </div>
