--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div class="wrapper">
+<!--    Header-->
     <header class="header">
         <div class="header__container">
             <div class="header__navigation">
@@ -39,7 +40,7 @@
             </div>
         </div>
     </header>
-
+<!--        Page. Categories for man-->
     <main class="page">
         <div class="page__categories categories">
             <div class="categories__container">
@@ -181,6 +182,7 @@
                 </div>
             </div>
         </div>
+<!--        Page. Wishlist-->
         <div class="page__wishlist wishlist">
             <div class="wishlist__container">
                 <div class="wishlist__title">
@@ -288,6 +290,7 @@
                 </ul>
             </div>
         </div>
+<!--        Page. Orders-->
         <div class="page__orders orders">
             <div class="orders__container">
                 <ul class="orders__list list">
@@ -430,7 +433,7 @@
             </div>
         </div>
     </main>
-
+<!--Footer-->
     <footer class="footer">
             <div class="footer__title">
                 <h3>
