--- a/lesson-15/index.html
+++ b/lesson-15/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="wrapper">
 <!--    Header-->
-    <header class="header">
+    <header class="header header--margin">
         <div class="header__container">
             <div class="header__navigation">
                 <a class="header__logo logo" href="#">
