--- a/lesson-16/index.html
+++ b/lesson-16/index.html
@@ -84,7 +84,7 @@
                                 State*
                             </label>
                             <select required class="item__select item__select--side-arrow" name="state-list" id="state">
-                                <option value="01">
+                                <option disabled value="">
                                     State
                                 </option>
                                 <option value="02">
@@ -207,7 +207,7 @@
                                 State*
                             </label>
                             <select required class="item__select item__select--arrow" name="state-list" id="state-check">
-                                <option value="01">
+                                <option disabled value="">
                                     State
                                 </option>
                                 <option value="02">
